// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should close detail modal when close button is clicked 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          test notice content
        </span>
        <span
          class="notice-expand-btn"
          role="button"
          tabindex="0"
        >
          查看全部
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 560px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="css-pnl6ml"
              >
                test notice content
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should close detail modal when close button is clicked 2`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          test notice content
        </span>
        <span
          class="notice-expand-btn"
          role="button"
          tabindex="0"
        >
          查看全部
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-wrap"
        style="display: none;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 560px; transform-origin: NaNpx NaNpx; display: none;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="css-pnl6ml"
              >
                test notice content
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should not show expand button when text does not overflow 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          notice
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should open detail modal via keyboard Enter on expand button 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          keyboard test notice
        </span>
        <span
          class="notice-expand-btn"
          role="button"
          tabindex="0"
        >
          查看全部
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 560px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="css-pnl6ml"
              >
                keyboard test notice
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should open detail modal when expand button is clicked 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          这是一条非常长的公告内容，需要展开才能查看完整信息，测试展开按钮功能是否正常工作
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner expand button and detail modal should show expand button when text overflows and open detail modal on click 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          notice
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner should not render anything when notice data is empty 1`] = `
<body>
  <div />
</body>
`;

exports[`base/page/Nav/CompanyNoticeBanner should render banner when notice data is present 1`] = `
<body>
  <div>
    <div
      class="css-1ap0jdm"
    >
      <span
        class="notice-label"
      >
        <span
          aria-label="notification"
          class="anticon anticon-notification notice-label-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="notification"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M880 112c-3.8 0-7.7.7-11.6 2.3L292 345.9H128c-8.8 0-16 7.4-16 16.6v299c0 9.2 7.2 16.6 16 16.6h101.6c-3.7 11.6-5.6 23.9-5.6 36.4 0 65.9 53.8 119.5 120 119.5 55.4 0 102.1-37.6 115.9-88.4l408.6 164.2c3.9 1.5 7.8 2.3 11.6 2.3 16.9 0 32-14.2 32-33.2V145.2C912 126.2 897 112 880 112zM344 762.3c-26.5 0-48-21.4-48-47.8 0-11.2 3.9-21.9 11-30.4l84.9 34.1c-2 24.6-22.7 44.1-47.9 44.1z"
            />
          </svg>
        </span>
        <span>
          系统公告
        </span>
      </span>
      <div
        class="notice-content-area"
      >
        <span
          class="notice-text"
        >
          notice
        </span>
      </div>
    </div>
  </div>
</body>
`;
